--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,10 @@
 
     <string name="navigation_bottom_singlematch">Match</string>
     <string name="navigation_bottom_quickmatch">Qucik Scorer</string>
-    <string name="navigation_bottom_match">Cup / League</string>
+    <string name="navigation_bottom_tournament">Tournament</string>
 
     <string name="retry">Retry</string>
     <string name="post_error">An error occurred while loading the posts</string>
+    <string name="next_activity">Next Activity</string>
+    <string name="integer"> %1$s </string>
 </resources>
